# Pulsar-SCF

./: CMakeLists.txt  Doxyfile  README.md
cmake/: FindGlobalArrays.cmake
dox/: JK_build.md  diis.md  doccfg.doxcf
pulsar_scf/: CMakeLists.txt  D.cpp  DF.cpp  DF.hpp  DIIS.hpp  F.cpp  F.hpp  G.cpp  G.hpp  H.cpp  H.hpp  HelperFunctions.cpp  HelperFunctions.hpp  JK.cpp  JK.hpp  MatrixFillFxns.hpp  PulsarSCF.hpp  S.cpp  S.hpp  SCF.cpp  SCF.hpp  SchwarzScreen.cpp  SchwarzScreen.hpp  ShellPairItr.hpp  T.cpp  T.hpp  V.cpp  V.hpp  X.cpp  X.hpp  __init__.py  creator.cpp  modinfo.py
pulsar_scf/builders/: Builders.hpp  CMakeLists.txt  D.cpp  D.hpp  DF.cpp  DF.hpp  F.cpp  F.hpp  G.cpp  G.hpp  H.cpp  H.hpp  JK.cpp  JK.hpp  S.cpp  S.hpp  T.cpp  T.hpp  V.cpp  V.hpp  X.cpp  X.hpp
pulsar_scf/ga_builders/: Builders.hpp  CMakeLists.txt  F.cpp  G.cpp  GATensor.cpp  GATensor.hpp  GlobalArrays.cpp  GlobalArrays.hpp  H.cpp  JK.cpp  JK.hpp  S.cpp  T.cpp  V.cpp  X.cpp
pulsar_scf/helpers/: CMakeLists.txt  SchwarzScreen.cpp  SchwarzScreen.hpp  ShellPairItr.hpp  ShellQuartetItr.hpp  ShellTripleItr.hpp
pulsar_scf_test/: CMakeLists.txt  TestCommon.hpp  TestCommon.py
pulsar_scf_test/builders/: CMakeLists.txt  TestD.py  TestDFCoef.py  TestDFInts.py  TestF.py  TestG.py  TestH.py  TestJK.py  TestMetric.py  TestS.py  TestT.py  TestV.py  TestX.py
pulsar_scf_test/ga_builders/: CMakeLists.txt  TestF.py  TestG.py  TestH.py  TestJK.py  TestS.py  TestT.py  TestV.py  TestX.py
pulsar_scf_test/helpers/: CMakeLists.txt  TestDIIS.cpp  TestSchwarzScreen.py  TestShellPairItr.cpp  TestShellQuartetItr.cpp  TestShellTripleItr.cpp
pulsar_scf_test/scf/: CMakeLists.txt  TestDFSCF.py  TestDFSCF.py.autosave  TestSCF.py
